--- a/kerem.css
+++ b/kerem.css
@@ -1,8 +1,14 @@
 
-    
+     #buttons  {
+         
+         width: 50%;
+         padding: 50px;
+            
+      }
 
-    body {
-        background-color: lightblue;
+     body {
+           
+         background-color: lightblue;
       }
 
      
