--- a/kerem.css
+++ b/kerem.css
@@ -1,8 +1,8 @@
 
      #buttons  {
          
-         width: 50%;
-         padding: 50px;
+         width:200px; text-align:center;
+         
             
       }
 
